--- a/posit_conf_prez.html
+++ b/posit_conf_prez.html
@@ -383,9 +383,6 @@
       margin-right: 0; 
     }
   </style>
-  <script src="posit_conf_prez_files/libs/quarto-diagram/mermaid.min.js"></script>
-  <script src="posit_conf_prez_files/libs/quarto-diagram/mermaid-init.js"></script>
-  <link href="posit_conf_prez_files/libs/quarto-diagram/mermaid.css" rel="stylesheet">
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -680,23 +677,23 @@ Yuval
 <span id="cb9-6"><a href="#cb9-6"></a>    <span class="at">by =</span> <span class="st">'trt'</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 
-<div id="hxiihzotus" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#hxiihzotus table {
+<div id="geigkkzlvi" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#geigkkzlvi table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#hxiihzotus thead, #hxiihzotus tbody, #hxiihzotus tfoot, #hxiihzotus tr, #hxiihzotus td, #hxiihzotus th {
+#geigkkzlvi thead, #geigkkzlvi tbody, #geigkkzlvi tfoot, #geigkkzlvi tr, #geigkkzlvi td, #geigkkzlvi th {
   border-style: none;
 }
 
-#hxiihzotus p {
+#geigkkzlvi p {
   margin: 0;
   padding: 0;
 }
 
-#hxiihzotus .gt_table {
+#geigkkzlvi .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -722,12 +719,12 @@ Yuval
   border-left-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_caption {
+#geigkkzlvi .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#hxiihzotus .gt_title {
+#geigkkzlvi .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -739,7 +736,7 @@ Yuval
   border-bottom-width: 0;
 }
 
-#hxiihzotus .gt_subtitle {
+#geigkkzlvi .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -751,7 +748,7 @@ Yuval
   border-top-width: 0;
 }
 
-#hxiihzotus .gt_heading {
+#geigkkzlvi .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -763,13 +760,13 @@ Yuval
   border-right-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_bottom_border {
+#geigkkzlvi .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_col_headings {
+#geigkkzlvi .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -784,7 +781,7 @@ Yuval
   border-right-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_col_heading {
+#geigkkzlvi .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -804,7 +801,7 @@ Yuval
   overflow-x: hidden;
 }
 
-#hxiihzotus .gt_column_spanner_outer {
+#geigkkzlvi .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -816,15 +813,15 @@ Yuval
   padding-right: 4px;
 }
 
-#hxiihzotus .gt_column_spanner_outer:first-child {
+#geigkkzlvi .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hxiihzotus .gt_column_spanner_outer:last-child {
+#geigkkzlvi .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hxiihzotus .gt_column_spanner {
+#geigkkzlvi .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -836,11 +833,11 @@ Yuval
   width: 100%;
 }
 
-#hxiihzotus .gt_spanner_row {
+#geigkkzlvi .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#hxiihzotus .gt_group_heading {
+#geigkkzlvi .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -866,7 +863,7 @@ Yuval
   text-align: left;
 }
 
-#hxiihzotus .gt_empty_group_heading {
+#geigkkzlvi .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -881,15 +878,15 @@ Yuval
   vertical-align: middle;
 }
 
-#hxiihzotus .gt_from_md > :first-child {
+#geigkkzlvi .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hxiihzotus .gt_from_md > :last-child {
+#geigkkzlvi .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hxiihzotus .gt_row {
+#geigkkzlvi .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -908,7 +905,7 @@ Yuval
   overflow-x: hidden;
 }
 
-#hxiihzotus .gt_stub {
+#geigkkzlvi .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -921,7 +918,7 @@ Yuval
   padding-right: 5px;
 }
 
-#hxiihzotus .gt_stub_row_group {
+#geigkkzlvi .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -935,15 +932,15 @@ Yuval
   vertical-align: top;
 }
 
-#hxiihzotus .gt_row_group_first td {
+#geigkkzlvi .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#hxiihzotus .gt_row_group_first th {
+#geigkkzlvi .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#hxiihzotus .gt_summary_row {
+#geigkkzlvi .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -953,16 +950,16 @@ Yuval
   padding-right: 5px;
 }
 
-#hxiihzotus .gt_first_summary_row {
+#geigkkzlvi .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_first_summary_row.thick {
+#geigkkzlvi .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#hxiihzotus .gt_last_summary_row {
+#geigkkzlvi .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -972,7 +969,7 @@ Yuval
   border-bottom-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_grand_summary_row {
+#geigkkzlvi .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -982,7 +979,7 @@ Yuval
   padding-right: 5px;
 }
 
-#hxiihzotus .gt_first_grand_summary_row {
+#geigkkzlvi .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -992,7 +989,7 @@ Yuval
   border-top-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_last_grand_summary_row_top {
+#geigkkzlvi .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1002,11 +999,11 @@ Yuval
   border-bottom-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_striped {
+#geigkkzlvi .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hxiihzotus .gt_table_body {
+#geigkkzlvi .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1015,7 +1012,7 @@ Yuval
   border-bottom-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_footnotes {
+#geigkkzlvi .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1029,7 +1026,7 @@ Yuval
   border-right-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_footnote {
+#geigkkzlvi .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -1038,7 +1035,7 @@ Yuval
   padding-right: 5px;
 }
 
-#hxiihzotus .gt_sourcenotes {
+#geigkkzlvi .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1052,7 +1049,7 @@ Yuval
   border-right-color: #D3D3D3;
 }
 
-#hxiihzotus .gt_sourcenote {
+#geigkkzlvi .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -1060,63 +1057,63 @@ Yuval
   padding-right: 5px;
 }
 
-#hxiihzotus .gt_left {
+#geigkkzlvi .gt_left {
   text-align: left;
 }
 
-#hxiihzotus .gt_center {
+#geigkkzlvi .gt_center {
   text-align: center;
 }
 
-#hxiihzotus .gt_right {
+#geigkkzlvi .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hxiihzotus .gt_font_normal {
+#geigkkzlvi .gt_font_normal {
   font-weight: normal;
 }
 
-#hxiihzotus .gt_font_bold {
+#geigkkzlvi .gt_font_bold {
   font-weight: bold;
 }
 
-#hxiihzotus .gt_font_italic {
+#geigkkzlvi .gt_font_italic {
   font-style: italic;
 }
 
-#hxiihzotus .gt_super {
+#geigkkzlvi .gt_super {
   font-size: 65%;
 }
 
-#hxiihzotus .gt_footnote_marks {
+#geigkkzlvi .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#hxiihzotus .gt_asterisk {
+#geigkkzlvi .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#hxiihzotus .gt_indent_1 {
+#geigkkzlvi .gt_indent_1 {
   text-indent: 5px;
 }
 
-#hxiihzotus .gt_indent_2 {
+#geigkkzlvi .gt_indent_2 {
   text-indent: 10px;
 }
 
-#hxiihzotus .gt_indent_3 {
+#geigkkzlvi .gt_indent_3 {
   text-indent: 15px;
 }
 
-#hxiihzotus .gt_indent_4 {
+#geigkkzlvi .gt_indent_4 {
   text-indent: 20px;
 }
 
-#hxiihzotus .gt_indent_5 {
+#geigkkzlvi .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1186,31 +1183,12 @@ Yuval
 </section>
 <section id="technical-side" class="slide level2">
 <h2>Technical side</h2>
-<ul>
-<li>CI/CD pipelines</li>
-</ul>
-</section>
+
+<img data-src="posit_conf_prez_files/figure-revealjs/unnamed-chunk-8-1.png" width="960" class="r-stretch"></section>
 <section id="research-side" class="slide level2">
-<h2>Research side</h2>
-<div class="cell" data-reveal="true">
-<div class="cell-output-display">
-<div>
-<p>
-</p><pre class="mermaid" data-tooltip-selector="#mermaid-tooltip-1">flowchart LR
-  A[Hard edge] --&gt; B(Round edge)
-  B --&gt; C{Decision}
-  C --&gt; D[Result one]
-  C --&gt; E[Result two]
+<h2>Research Side</h2>
 
-</pre>
-<div id="mermaid-tooltip-1" class="mermaidTooltip">
-
-</div>
-<p></p>
-</div>
-</div>
-</div>
-</section></section>
+<img data-src="posit_conf_prez_files/figure-revealjs/unnamed-chunk-9-1.png" width="960" class="r-stretch"></section></section>
 <section id="resources" class="title-slide slide level1 center">
 <h1>Resources</h1>
 <div class="footer footer-default">
